# GS_SLAM_teleoperation

./: .gitignore  .gitmodules  README.md  docker-compose.yml
cartgs_backend/: CMakeLists.txt  post_create.sh
cartgs_backend/.devcontainer/: Dockerfile
cartgs_backend/include/: gaussian_mapper.h  gaussian_model.h
cartgs_backend/src/: gaussian_model.cpp
cartgs_gsslam_backend/.devcontainer/: devcontainer.json
cartgs_gsslam_backend/src/: gaussian_mapper.cpp
gsslam_backend/: CMakeLists.txt  post_create.sh
gsslam_backend/include/: gaussian_model.h
gsslam_backend/log/: latest_build
gsslam_backend/ros2_ws/src/orb_slam3_ros2_wrapper/: CMakeLists.txt
gsslam_backend/ros2_ws/src/orb_slam3_ros2_wrapper/include/: ros_utils.hpp
gsslam_backend/ros2_ws/src/orb_slam3_ros2_wrapper/launch/: run_scanning.py
gsslam_backend/ros2_ws/src/orb_slam3_ros2_wrapper/src/: rgbd-slam-node.cpp
gsslam_backend/src/: gaussian_mapper.cpp  gaussian_model.cpp
interactive_viewer/: post_create.sh
interactive_viewer/.devcontainer/: devcontainer.json
interactive_viewer/UnityPlugin/include/: CudaKernels.h  GLPluginAPI.h  PlatformBase.h  PluginAPI.h
interactive_viewer/UnityPlugin/source/: PluginAPI.cpp
interactive_viewer/UnityProject/Assets/: SimpleSpot.fbx
interactive_viewer/UnityProject/ProjectSettings/: InputManager.asset  ProjectSettings.asset
interactive_viewer/UnityProject/UserSettings/: EditorUserSettings.asset
unity_interactive_viewer/: Unity_lic.ulf
unity_interactive_viewer/.devcontainer/: Dockerfile
unity_interactive_viewer/GaussianSplattingVRViewerUnity_cartgs/GaussianSplattingVRViewer/: mono_crash.4d3a4b67a.5.json  mono_crash.mem.134117.78e13c3fe6c0.blob  mono_crash.mem.84362.7a67e03fb6c0.blob
unity_interactive_viewer/licence/: Unity_lic.ulf
unity_viewer/: lisence_activation.sh
unity_viewer/GaussianSplattingVRViewerUnity_cartgs/UnityPlugin/: Building.sh
(+228 files in other folders)
